fixed z-index issue

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -15,7 +15,7 @@
     position: fixed;
     top: 105px;
     right: 50%;
-    z-index: 999;
+    z-index: 99999999;
     transform: translateX(50%)
   }
 
